# event-driven-cpp

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  annotated.html  build_2md__files_2README_8md.html  build_2md__files_2docs_2README_8md.html  callbacks_2main_8cpp.html  callbacks_8cpp.html  callbacks_8hpp.html  callbacks_8hpp.js  callbacks_8hpp_source.html  callbacks_8md.html  callbacks__test_8cpp.html  callbacks__test_8cpp.js  classConcreteObserver-members.html  classConcreteObserver.html  classConcreteObserver.js  classTestObserver-members.html  classTestObserver.html  classTestObserver.js  classcallbacks_1_1Event-members.html  classcallbacks_1_1Event.html  classcallbacks_1_1Event.js  classcommon_1_1Logger-members.html  classcommon_1_1Logger.html  classes.html  classevent__queue_1_1EventQueue-members.html  classevent__queue_1_1EventQueue.html  classevent__queue_1_1EventQueue.js  classobserver_1_1IObserver-members.html  classobserver_1_1IObserver.html  classobserver_1_1Subject-members.html  classobserver_1_1Subject.html  classqt__signals_1_1QtSignalsExample-members.html  classqt__signals_1_1QtSignalsExample.html  classqt__signals_1_1QtSignalsExample.js  design_8md.html  (+104 more)
.github/workflows/: ci.yml
cmake/: doxygen.cmake
docs/: README.md  callbacks.md  design.md  event_driven_comparison.md  event_queue.md  io_and_sockets.md  io_events.md  observer.md  observer_vs_callbacks.md  qt_signals.md  setup.md  what_is_event_driven_programming.md
html/: annotated.html  annotated_dup.js  callbacks_2main_8cpp.js  callbacks_8hpp.html  callbacks_8hpp_source.html  classConcreteObserver.html  classTestObserver-members.html  classTestObserver.html  classcallbacks_1_1Event-members.html  classcommon_1_1Logger.js  classevent__queue_1_1EventQueue-members.html  classobserver_1_1IObserver-members.html  classobserver_1_1IObserver.html  classobserver_1_1IObserver.js  classobserver_1_1Subject.html  classobserver_1_1Subject.js  design_8md.html  dir_5376cbbeba9836d2ab7d01399d5aa22a.html  dir_625eb6cf9642261cb7aab9043792d4b4.html  dir_625eb6cf9642261cb7aab9043792d4b4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_9ac954d1ba0b5ede7e3371c043d6bd5d.html  dir_9ac954d1ba0b5ede7e3371c043d6bd5d.js  dir_ba144cc142e2000a234564bcf1628ca1.html  dir_ba144cc142e2000a234564bcf1628ca1.js  dir_d4a213ced0ecafd3d6be06d9b364b5c2.js  dir_fdedb0aba14d44ce9d99bc100e026e6a.html  dir_fdedb0aba14d44ce9d99bc100e026e6a.js  event__queue_2main_8cpp.html  event__queue_2main_8cpp.js  event__queue_8hpp.js  event__queue__test_8cpp.js  files.html  functions.html  functions_func.html  functions_type.html  globals.html  globals_func.html  globals_vars.html  hierarchy.js  (+44 more)
html/search/: all_1.js  all_13.js  all_15.js  all_16.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_6.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  files_2.js  files_5.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_9.js  functions_a.js  functions_d.js  functions_f.js  namespaces_0.js  namespaces_2.js  namespaces_4.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_7.js  pages_b.js  typedefs_0.js  typedefs_1.js  variables_2.js
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_14.js  all_17.js  all_18.js  all_19.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  defines_0.js  enums_0.js  enumvalues_2.js  files_0.js  files_1.js  files_3.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_b.js  functions_c.js  functions_e.js  (+13 more)
src/callbacks/: CMakeLists.txt  README.md  callbacks.cpp  callbacks.hpp  main.cpp
src/common/: CMakeLists.txt  README.md  logger.cpp  logger.hpp
src/event_queue/: CMakeLists.txt  README.md  event_queue.cpp  event_queue.hpp  main.cpp
src/io_and_sockets/: CMakeLists.txt  README.md  io_and_sockets.cpp  io_and_sockets.hpp  main.cpp
src/observer/: CMakeLists.txt  README.md  main.cpp  observer.hpp  subject.hpp
src/qt_signals/: CMakeLists.txt  README.md  main.cpp  qt_signals.cpp  qt_signals.hpp
tests/: CMakeLists.txt  callbacks_test.cpp  event_queue_test.cpp  io_and_sockets_test.cpp  observer_test.cpp  qt_signals_test.cpp
xml/: Doxyfile.xml  build_2md__files_2README_8md.xml  build_2md__files_2docs_2README_8md.xml  callbacks_2main_8cpp.xml  callbacks_8cpp.xml  callbacks_8hpp.xml  callbacks_8md.xml  callbacks__test_8cpp.xml  classConcreteObserver.xml  classTestObserver.xml  classcallbacks_1_1Event.xml  classcommon_1_1Logger.xml  classevent__queue_1_1EventQueue.xml  classobserver_1_1IObserver.xml  classobserver_1_1Subject.xml  classqt__signals_1_1QtSignalsExample.xml  design_8md.xml  dir_0ada2ea2987ff030dbd28857b66aa96f.xml  dir_4fef79e7177ba769987a8da36c892c5f.xml  dir_5376cbbeba9836d2ab7d01399d5aa22a.xml  dir_59425e443f801f1f2fd8bbe4959a3ccf.xml  dir_625eb6cf9642261cb7aab9043792d4b4.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_6b33c6d9b060a7769022dd925d88950d.xml  dir_9ac954d1ba0b5ede7e3371c043d6bd5d.xml  dir_ba144cc142e2000a234564bcf1628ca1.xml  dir_d4a213ced0ecafd3d6be06d9b364b5c2.xml  dir_fdedb0aba14d44ce9d99bc100e026e6a.xml  event__driven__comparison_8md.xml  event__queue_2main_8cpp.xml  event__queue_8cpp.xml  event__queue_8hpp.xml  event__queue_8md.xml  event__queue__test_8cpp.xml  index.xml  indexpage.xml  io__and__sockets_2main_8cpp.xml  io__and__sockets_8cpp.xml  io__and__sockets_8hpp.xml  io__and__sockets_8md.xml  (+45 more)
